# ai_for_bharat

./: .gitignore  README.md  backend.py  ec2_setup.sh  interviewer-key-pair.pem  main.py  pyproject.toml
.kiro/specs/ai-interviewer/: design.md  requirements.md  tasks.md
app_pages/: chat.py  dashboard.py  home.py  summary.py
utils/: generate_audio.py  transcribe.py
