[project]
name = "ai-interviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "edge-tts>=7.2.7",
    "faster-whisper>=1.2.1",
    "langchain>=1.2.3",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.6",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "pypdf>=5.0.0",
    "pywin32>=311",
    "streamlit>=1.52.2",
    "streamlit-mic-recorder>=0.0.8",
    "streamlit-monaco>=0.1.3",
    "typing>=3.10.0.0",
]
