[project]
name = "ai-interviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "boto3>=1.34",
    "edge-tts>=7.2.7",
    "faster-whisper>=1.2.1",
    "langchain>=1.2.3",
    "langchain-core>=1.2.7",
    "langchain-aws>=0.2.0",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.6",
    "nest-asyncio>=1.6.0",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "pypdf>=5.0.0",
    "streamlit>=1.52.2",
    "streamlit-mic-recorder>=0.0.8",
    "streamlit-monaco>=0.1.3",
]
